# goit-cs-hw-03

./: README.md
mongo/: config.ini.example  main.py  pyproject.toml
mongo/src/: db_connection.py
postgres/: config.ini.example  main.py  pyproject.toml
postgres/src/: creator.py  db_connection.py  query.py  seed.py
