[tool.poetry]
name = "homework-05"
version = "0.1.0"
description = "SQL databases (PostgreSQL)"
authors = ["Matajur <126118653+Matajur@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
